--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
   <head>
     <meta charset="UTF-8">
-    <title>Название проекта</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Интернет магазин: Drink2Go</title>
   </head>
+
   <body class="page__body">
-    <header class="header">Шапка</header>
+    <header class="main-header">Шапка</header>
+    <main class="main-container">
+      <h1 class="visually-hidden">Интернет магазин: Drink2Go.</h1>
+    </main>
+    <footer class="main-footer">Подвал</footer>
 
     <script src="./js/script.js" defer></script>
   </body>
+
 </html>
