--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,151 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="./fonts/montserrat-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/montserrat-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Интернет магазин: Drink2Go</title>
   </head>
 
   <body class="page__body">
-    <header class="main-header">Шапка</header>
+    <header class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="./img/logo/logo-desktop.svg" width="170" height="36">
+            <source media="(min-width: 768px)" srcset="./img/logo/logo-tablet.svg" width="82" height="36">
+            <img class="main-header__logo-image" src="./img/logo/logo-mobile.svg" width="32" height="36" alt="Логотип сайта Drink2Go">
+          </picture>
+        </a>
+        <span class="main-header__text">Интернет-магазин кофейных напитков</span>
+        <div class="main-header__wrapper">
+          <ul class="user-list">
+            <li class="user-list__item">
+              <a class="user-list__link" href="#!">
+                <svg class="user-list__icon user-list__icon--user" width="18" height="18" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-user" />
+                </svg>
+                <span class="user-list__text">Войти</span>
+              </a>
+            </li>
+            <li class="user-list__item">
+              <a class="user-list__link" href="#!">
+                <svg class="user-list__icon user-list__icon--cart" width="18" height="18" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-cart" />
+                </svg>
+                <span class="user-list__text">Корзина</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <nav class="main-nav main-nav--closed main-nav--nojs">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню.</span>
+          </button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--current" href="#!">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">Каталог</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">Доставка</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">О нас </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main class="main-container">
       <h1 class="visually-hidden">Интернет магазин: Drink2Go.</h1>
     </main>
-    <footer class="main-footer">Подвал</footer>
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <a class="main-footer__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 768px)" srcset="./img/logo/logo-desktop.svg" width="170" height="36">
+            <img class="main-footer__logo-image" src="./img/logo/logo-tablet.svg" width="82" height="36" alt="Логотип сайта Drink2Go">
+          </picture>
+        </a>
+        <span class="main-footer__text">Интернет-магазин кофейных напитков</span>
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link" href="#!" target="_blank">
+                <svg class="social__icon" width="20" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-vk" />
+                </svg>
+                <span class="visually-hidden">Вконтакте.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#!" target="_blank">
+                <svg class="social__icon" width="22" height="22" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-pinterest" />
+                </svg>
+                <span class="visually-hidden">Пинтерест.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#!" target="_blank">
+                <svg class="social__icon" width="20" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-ok" />
+                </svg>
+                <span class="visually-hidden">Одноклассники.</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-menu menu">
+          <p class="menu__heading">Интернет-магазин</p>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#!">Каталог</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#!">Доставка</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#!">Способы оплаты</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#!">О нас</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-media media">
+          <p class="media__heading">Медиа</p>
+          <ul class="media__list">
+            <li class="media__item">
+              <a class="media__link" href="#!">Блог</a>
+            </li>
+            <li class="media__item">
+              <a class="media__link" href="#!">Информация для СМИ</a>
+            </li>
+            <li class="media__item">
+              <a class="media__link" href="#!">Правовая информация</a>
+            </li>
+          </ul>
+        </div>
+        <address class="footer-contact contact">
+          <p class="contact__heading">Контакты</p>
+          <p class="contact__link" href="#!">
+            <svg class="contact__icon" width="13" height="16" aria-hidden="true" focusable="false">
+              <use xlink:href="./img/icons/stack.svg#icon-address" />
+            </svg>
+            Санкт-Петербург, набережная реки Карповки, дом 5
+          </p>
+          <a class="contact__link" href="tel:+79999999999">
+            <svg class="contact__icon" width="13" height="16" aria-hidden="true" focusable="false">
+              <use xlink:href="./img/icons/stack.svg#icon-phone" />
+            </svg>
+            +7 (999) 999-99-99</a>
+        </address>
+      </div>
+    </footer>
 
     <script src="./js/script.js" defer></script>
   </body>
