--- a/source/index.html
+++ b/source/index.html
@@ -21,50 +21,52 @@
           </picture>
         </a>
         <span class="main-header__text">Интернет-магазин кофейных напитков</span>
-        <div class="main-header__wrapper">
-          <ul class="user-list">
-            <li class="user-list__item">
-              <a class="user-list__link" href="#!">
-                <svg class="user-list__icon user-list__icon--user" width="18" height="18" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-user" />
-                </svg>
-                <span class="user-list__text">Войти</span>
-              </a>
-            </li>
-            <li class="user-list__item">
-              <a class="user-list__link" href="#!">
-                <svg class="user-list__icon user-list__icon--cart" width="18" height="18" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-cart" />
-                </svg>
-                <span class="user-list__text">Корзина</span>
-              </a>
-            </li>
-          </ul>
-        </div>
         <nav class="main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню.</span>
           </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--current" href="#!">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">Каталог</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">Доставка</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">О нас </a>
-            </li>
-          </ul>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a class="site-list__link site-list__link--current" href="#!">Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">Каталог</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">Доставка</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">О нас </a>
+              </li>
+            </ul>
+          </div>
         </nav>
+        <ul class="user-list user-list--nojs">
+          <li class="user-list__item">
+            <a class="user-list__link" href="#!">
+              <svg class="user-list__icon user-list__icon--user" width="16" height="16" aria-hidden="true" focusable="false">
+                <use xlink:href="./img/icons/stack.svg#icon-user" />
+              </svg>
+              <span class="user-list__text">Войти</span>
+            </a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link" href="#!">
+              <svg class="user-list__icon user-list__icon--cart" width="16" height="16" aria-hidden="true" focusable="false">
+                <use xlink:href="./img/icons/stack.svg#icon-cart" />
+              </svg>
+              <span class="user-list__text">Корзина</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
+
     <main class="main-container">
       <h1 class="visually-hidden">Интернет магазин: Drink2Go.</h1>
     </main>
+
     <footer class="main-footer">
       <div class="main-footer__wrapper">
         <a class="main-footer__logo" href="index.html">
@@ -135,7 +137,7 @@
         </div>
         <address class="footer-contact contact">
           <p class="contact__heading">Контакты</p>
-          <p class="contact__link" href="#!">
+          <p class="contact__link">
             <svg class="contact__icon" width="13" height="16" aria-hidden="true" focusable="false">
               <use xlink:href="./img/icons/stack.svg#icon-address" />
             </svg>
