edit tablet header

--- a/source/index.html
+++ b/source/index.html
@@ -20,26 +20,28 @@
             <img class="main-header__logo-image" src="./img/logo/logo-mobile.svg" width="32" height="36" alt="Логотип сайта Drink2Go">
           </picture>
         </a>
-        <span class="main-header__text">Интернет-магазин кофейных напитков</span>
+        <p class="main-header__text">Интернет-магазин кофейных напитков</p>
         <nav class="main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню.</span>
           </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--current" href="#!">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">Каталог</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">Доставка</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#!">О нас </a>
-            </li>
-          </ul>
-          <ul class="user-list user-list--nojs">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a class="site-list__link site-list__link--current" href="#!">Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">Каталог</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">Доставка</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#!">О нас </a>
+              </li>
+            </ul>
+          </div>
+          <ul class="main-nav__list user-list user-list--nojs">
             <li class="user-list__item">
               <a class="user-list__link" href="#!">
                 <svg class="user-list__icon user-list__icon--user" width="16" height="16" aria-hidden="true" focusable="false">
