add desktop header

--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
           </picture>
         </a>
         <p class="main-header__text">Интернет-магазин кофейных напитков</p>
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--position main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню.</span>
           </button>
