add desktop footer

--- a/source/index.html
+++ b/source/index.html
@@ -108,7 +108,7 @@
             </ul>
           </section>
         </div>
-        <div class="footer-menu menu">
+        <div class="main-footer__menu menu">
           <h4 class="menu__heading heading-small">Интернет-магазин
             <span class="visually-hidden"> ссылки</span>
           </h4>
@@ -127,7 +127,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-media media">
+        <div class="main-footer__media media">
           <h4 class="media__heading heading-small">Медиа
             <span class="visually-hidden"> ссылки</span>
           </h4>
@@ -143,13 +143,13 @@
             </li>
           </ul>
         </div>
-        <div class=" contacts">
+        <div class="main-footer__contacts contacts">
           <h4 class="contacts__heading heading-small">Контакты</h4>
           <p class="contacts__text">
             <svg class="contacts__icon" width="13" height="16" aria-hidden="true" focusable="false">
               <use xlink:href="./img/icons/stack.svg#icon-address" />
             </svg>
-            Санкт-Петербург, набережная<br> реки Карповки, дом 5
+            Санкт-Петербург, набережная реки Карповки, дом 5
           </p>
           <a class="contacts__link" href="tel:+79999999999">
             <svg class="contacts__icon" width="13" height="16" aria-hidden="true" focusable="false">
