--- a/source/index.html
+++ b/source/index.html
@@ -25,22 +25,20 @@
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню.</span>
           </button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link--current" href="#!">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="#!">Каталог</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="#!">Доставка</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="#!">О нас </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="main-nav__list main-nav__list--secondary site-list">
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--current" href="#!">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">Каталог</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">Доставка</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#!">О нас </a>
+            </li>
+          </ul>
           <ul class="main-nav__list user-list user-list--nojs">
             <li class="user-list__item">
               <a class="user-list__link" href="#!">
