--- a/source/index.html
+++ b/source/index.html
@@ -64,6 +64,106 @@
 
     <main class="main-container">
       <h1 class="visually-hidden">Интернет магазин: Drink2Go.</h1>
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h2 class="visually-hidden">Новые товары</h2>
+          <div class="swiper">
+            <div class="swiper__wrapper swiper-wrapper">
+              <div class="swiper-slide">
+                <h3 class="swiper-slide__header">Декаф Флэт Уайт</h3>
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-1-desktop@x1.webp 1x, ./img/new/new-1-desktop@x2.webp 2x" width="600" height="600">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.webp 1x, ./img/new/new-1-tablet@x2.webp 2x" width="476" height="476">
+                  <source type="image/webp" srcset="./img/new/new-1-mobile@x1.webp, ./img/new/new-1-mobile@x2.webp 2x" width="280" height="280">
+                  <source media="(min-width: 1440px)" srcset="./img/new/new-1-desktop@x1.png 1x, ./img/new/new-1-desktop@x2.png 2x" width="600" height="600">
+                  <source media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.png 1x, ./img/new/new-1-tablet@x2.png 2x" width="476" height="476">
+                  <img class="swiper-slide__image" src="./img/new/new-1-mobile@x1.png" srcset="./img/new/new-1-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Декаф Флэт Уайт">
+                </picture>
+                <span class="swiper-slide__signature">Новинка!</span>
+                <p class="swiper-slide__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                <div class="swiper-slide__buttom-container">
+                  <div class="swiper-slide__price-container">
+                    <del class="swiper-slide__old-price">295₽</del>
+                    <b class="swiper-slide__price">225₽</b>
+                  </div>
+                  <a class="swiper-slide__button button" href="#!">Заказать</a>
+                </div>
+              </div>
+              <div class="swiper-slide visually-hidden">
+                <h3 class="swiper-slide__header">Лавандовый Латте</h3>
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-2-desktop@x1.webp 1x, ./img/new/new-2-desktop@x2.webp 2x" width="600" height="600">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.webp 1x, ./img/new/new-2-tablet@x2.webp 2x" width="476" height="476">
+                  <source type="image/webp" srcset="./img/new/new-2-mobile@x1.webp, ./img/new/new-2-mobile@x2.webp 2x" width="280" height="280">
+                  <source media="(min-width: 1440px)" srcset="./img/new/new-2-desktop@x1.png 1x, ./img/new/new-2-desktop@x2.png 2x" width="600" height="600">
+                  <source media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.png 1x, ./img/new/new-2-tablet@x2.png 2x" width="476" height="476">
+                  <img class="swiper-slide__image" src="./img/new/new-2-mobile@x1.png" srcset="./img/new/new-2-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Лавандовый Латте">
+                </picture>
+                <span class="swiper-slide__signature">Новинка!</span>
+                <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
+                <div class="swiper-slide__buttom-container">
+                  <div class="swiper-slide__price-container">
+                    <del class="swiper-slide__old-price">285₽</del>
+                    <b class="swiper-slide__price">265₽</b>
+                  </div>
+                  <a class="swiper-slide__button button" href="#!">Заказать</a>
+                </div>
+              </div>
+              <div class="swiper-slide visually-hidden">
+                <h3 class="swiper-slide__header">Тройной Эспрессо</h3>
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-3-desktop@x1.webp 1x, ./img/new/new-3-desktop@x2.webp 2x" width="600" height="600">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.webp 1x, ./img/new/new-3-tablet@x2.webp 2x" width="476" height="476">
+                  <source type="image/webp" srcset="./img/new/new-3-mobile@x1.webp, ./img/new/new-3-mobile@x2.webp 2x" width="280" height="280">
+                  <source media="(min-width: 1440px)" srcset="./img/new/new-3-desktop@x1.png 1x, ./img/new/new-3-desktop@x2.png 2x" width="600" height="600">
+                  <source media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.png 1x, ./img/new/new-3-tablet@x2.png 2x" width="476" height="476">
+                  <img class="swiper-slide__image" src="./img/new/new-3-mobile@x1.png" srcset="./img/new/new-3-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Тройной Эспрессо">
+                </picture>
+                <span class="swiper-slide__signature">Новинка!</span>
+                <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
+                <div class="swiper-slide__buttom-container">
+                  <div class="swiper-slide__price-container">
+                    <del class="swiper-slide__old-price">395₽</del>
+                    <b class="swiper-slide__price">375₽</b>
+                  </div>
+                  <a class="swiper-slide__button button" href="#!">Заказать</a>
+                </div>
+              </div>
+              <div class="swiper-pagination visually-hidden">
+                <ul class="swiper-pagination__list">
+                  <li class="swiper-pagination__item">
+                    <button class="swiper-pagination__button" type="button">
+                      <span class="visually-hidden">1 слайд.</span>
+                    </button>
+                  </li>
+                  <li class="swiper-pagination__item">
+                    <button class="swiper-pagination__button" type="button">
+                      <span class="visually-hidden">2 слайд.</span>
+                    </button>
+                  </li>
+                  <li class="swiper-pagination__item">
+                    <button class="swiper-pagination__button" type="button">
+                      <span class="visually-hidden">3 слайд.</span>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+              <button class="swiper-button swiper-button-prev visually-hidden" type="button">
+                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-arrow-prev" />
+                </svg>
+                <span class="visually-hidden">Предыдущий слайд.</span>
+              </button>
+              <button class="swiper-button swiper-button-next visually-hidden" type="button">
+                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-arrow-next" />
+                </svg>
+                <span class="visually-hidden">Следующий слайд.</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="main-footer">
