--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,6 @@
           <div class="swiper">
             <div class="swiper__wrapper swiper-wrapper">
               <div class="swiper-slide">
-                <h3 class="swiper-slide__header">Декаф Флэт Уайт</h3>
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-1-desktop@x1.webp 1x, ./img/new/new-1-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.webp 1x, ./img/new/new-1-tablet@x2.webp 2x" width="476" height="476">
@@ -79,18 +78,20 @@
                   <source media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.png 1x, ./img/new/new-1-tablet@x2.png 2x" width="476" height="476">
                   <img class="swiper-slide__image" src="./img/new/new-1-mobile@x1.png" srcset="./img/new/new-1-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Декаф Флэт Уайт">
                 </picture>
-                <span class="swiper-slide__signature">Новинка!</span>
-                <p class="swiper-slide__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-                <div class="swiper-slide__buttom-container">
-                  <div class="swiper-slide__price-container">
-                    <del class="swiper-slide__old-price">295₽</del>
-                    <b class="swiper-slide__price">225₽</b>
+                <div class="swiper-slide__info-container">
+                  <span class="swiper-slide__signature">Новинка!</span>
+                  <h3 class="swiper-slide__header">Декаф Флэт Уайт</h3>
+                  <p class="swiper-slide__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                  <div class="swiper-slide__buttom-container">
+                    <div class="swiper-slide__price-container">
+                      <del class="swiper-slide__old-price">295₽</del>
+                      <b class="swiper-slide__price">225₽</b>
+                    </div>
+                    <a class="swiper-slide__button button" href="#!">Заказать</a>
                   </div>
-                  <a class="swiper-slide__button button" href="#!">Заказать</a>
                 </div>
               </div>
               <div class="swiper-slide visually-hidden">
-                <h3 class="swiper-slide__header">Лавандовый Латте</h3>
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-2-desktop@x1.webp 1x, ./img/new/new-2-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.webp 1x, ./img/new/new-2-tablet@x2.webp 2x" width="476" height="476">
@@ -99,18 +100,20 @@
                   <source media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.png 1x, ./img/new/new-2-tablet@x2.png 2x" width="476" height="476">
                   <img class="swiper-slide__image" src="./img/new/new-2-mobile@x1.png" srcset="./img/new/new-2-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Лавандовый Латте">
                 </picture>
-                <span class="swiper-slide__signature">Новинка!</span>
-                <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
-                <div class="swiper-slide__buttom-container">
-                  <div class="swiper-slide__price-container">
-                    <del class="swiper-slide__old-price">285₽</del>
-                    <b class="swiper-slide__price">265₽</b>
+                <div class="swiper-slide__info-container">
+                  <h3 class="swiper-slide__header">Лавандовый Латте</h3>
+                  <span class="swiper-slide__signature">Новинка!</span>
+                  <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
+                  <div class="swiper-slide__buttom-container">
+                    <div class="swiper-slide__price-container">
+                      <del class="swiper-slide__old-price">285₽</del>
+                      <b class="swiper-slide__price">265₽</b>
+                    </div>
+                    <a class="swiper-slide__button button" href="#!">Заказать</a>
                   </div>
-                  <a class="swiper-slide__button button" href="#!">Заказать</a>
                 </div>
               </div>
               <div class="swiper-slide visually-hidden">
-                <h3 class="swiper-slide__header">Тройной Эспрессо</h3>
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-3-desktop@x1.webp 1x, ./img/new/new-3-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.webp 1x, ./img/new/new-3-tablet@x2.webp 2x" width="476" height="476">
@@ -119,17 +122,20 @@
                   <source media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.png 1x, ./img/new/new-3-tablet@x2.png 2x" width="476" height="476">
                   <img class="swiper-slide__image" src="./img/new/new-3-mobile@x1.png" srcset="./img/new/new-3-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Тройной Эспрессо">
                 </picture>
-                <span class="swiper-slide__signature">Новинка!</span>
-                <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
-                <div class="swiper-slide__buttom-container">
-                  <div class="swiper-slide__price-container">
-                    <del class="swiper-slide__old-price">395₽</del>
-                    <b class="swiper-slide__price">375₽</b>
+                <div class="swiper-slide__info-container">
+                  <h3 class="swiper-slide__header">Тройной Эспрессо</h3>
+                  <span class="swiper-slide__signature">Новинка!</span>
+                  <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
+                  <div class="swiper-slide__buttom-container">
+                    <div class="swiper-slide__price-container">
+                      <del class="swiper-slide__old-price">395₽</del>
+                      <b class="swiper-slide__price">375₽</b>
+                    </div>
+                    <a class="swiper-slide__button button" href="#!">Заказать</a>
                   </div>
-                  <a class="swiper-slide__button button" href="#!">Заказать</a>
                 </div>
               </div>
-              <div class="swiper-pagination visually-hidden">
+              <div class="swiper-pagination">
                 <ul class="swiper-pagination__list">
                   <li class="swiper-pagination__item">
                     <button class="swiper-pagination__button" type="button">
