--- a/source/index.html
+++ b/source/index.html
@@ -135,10 +135,22 @@
                   </div>
                 </div>
               </div>
+              <button class="swiper-button swiper-button-prev" type="button">
+                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-arrow" />
+                </svg>
+                <span class="visually-hidden">Предыдущий слайд.</span>
+              </button>
+              <button class="swiper-button swiper-button--secondary swiper-button-next" type="button">
+                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
+                  <use xlink:href="./img/icons/stack.svg#icon-arrow" />
+                </svg>
+                <span class="visually-hidden">Следующий слайд.</span>
+              </button>
               <div class="swiper-pagination">
-                <ul class="swiper-pagination__list">
+                <ol class="swiper-pagination__list">
                   <li class="swiper-pagination__item">
-                    <button class="swiper-pagination__button" type="button">
+                    <button class="swiper-pagination__button swiper-pagination__button--current" type="button">
                       <span class="visually-hidden">1 слайд.</span>
                     </button>
                   </li>
@@ -152,20 +164,8 @@
                       <span class="visually-hidden">3 слайд.</span>
                     </button>
                   </li>
-                </ul>
+                </ol>
               </div>
-              <button class="swiper-button swiper-button-prev visually-hidden" type="button">
-                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-arrow-prev" />
-                </svg>
-                <span class="visually-hidden">Предыдущий слайд.</span>
-              </button>
-              <button class="swiper-button swiper-button-next visually-hidden" type="button">
-                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-arrow-next" />
-                </svg>
-                <span class="visually-hidden">Следующий слайд.</span>
-              </button>
             </div>
           </div>
         </div>
