add features mobile

--- a/source/index.html
+++ b/source/index.html
@@ -170,6 +170,31 @@
           </div>
         </div>
       </section>
+      <section class="features">
+        <div class="features__wrapper">
+          <h2 class="features__title title">Главные причины выбрать Drink2Go</h2>
+          <span class="features__signature">Преимущества</span>
+          <ul class="features__list">
+            <li class="features__item features__item--speed">
+              <h3 class="features__header">Скорость</h3>
+              <p class="features__text">Готовый напиток всегда под рукой — просто открой банку</p>
+            </li>
+            <li class="features__item features__item--fit">
+              <h3 class="features__header">Удобство</h3>
+              <p class="features__text">Легко помещается и в карман,
+                и в маленькую сумочку</p>
+            </li>
+            <li class="features__item features__item--energy">
+              <h3 class="features__header">Бодрость</h3>
+              <p class="features__text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+            </li>
+            <li class="features__item features__item--ecology">
+              <h3 class="features__header">Экологичность</h3>
+              <p class="features__text">Вся упаковка сделана из перерабатываемых материалов</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="main-footer">
