--- a/source/index.html
+++ b/source/index.html
@@ -361,19 +361,29 @@
             </ol>
             <ul class="products_pagination pagination">
               <li class="pagination__item">
-                <a class="pagination__link" href="">Назад</a>
+                <a class="pagination__link" href="#!">
+                  <svg class="pagination__icon" width="10" height="6" aria-hidden="true" focusable="false">
+                    <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
+                  </svg>
+                  <span class="pagination__text">Назад</span>
+                </a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="">1</a>
+                <a class="pagination__link" href="#!">1</a>
               </li>
               <li class="pagination__item">
                 <a class="pagination__link pagination__link--current">2</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="">3</a>
+                <a class="pagination__link" href="#!">3</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="">Вперёд</a>
+                <a class="pagination__link" href="#!">
+                  <span class="pagination__text">Вперёд</span>
+                  <svg class="pagination__icon pagination__icon--secondary" width="10" height="6" aria-hidden="true" focusable="false">
+                    <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
