--- a/source/index.html
+++ b/source/index.html
@@ -204,6 +204,18 @@
           <form class="catalog__form form" method="get" action="https://echo.htmlacademy.ru/">
             <fieldset class="form__group">
               <p class="form__heading">Цена</p>
+              <div class="form__range range">
+                <div class="range__scale">
+                  <div class="range__bar" style="left: 0%; width: 90%">
+                    <button class="range__toggle range__toggle--min" type="button">
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range__toggle range__toggle--max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
             </fieldset>
             <fieldset class="form__group form__group--milk">
               <p class="form__heading">Наличие молока</p>
