add number input

--- a/source/index.html
+++ b/source/index.html
@@ -216,6 +216,12 @@
                   </div>
                 </div>
               </div>
+              <div class="form__number number">
+                <label class="visually-hidden" for="min-price">Минимальная цена</label>
+                <input class="number__input" type="number" name="min-price" id="min-price" placeholder="0">
+                <label class="visually-hidden" for="max-price">Максимальная цена</label>
+                <input class="number__input" type="number" value="900" name="max-price" id="max-price" placeholder="1000">
+              </div>
             </fieldset>
             <fieldset class="form__group form__group--milk">
               <p class="form__heading">Наличие молока</p>
