--- a/source/index.html
+++ b/source/index.html
@@ -422,7 +422,7 @@
                 </div>
               </li>
             </ol>
-            <ul class="products_pagination pagination">
+            <ul class="products__pagination pagination">
               <li class="pagination__item">
                 <a class="pagination__link" href="#!">
                   <svg class="pagination__icon" width="10" height="6" aria-hidden="true" focusable="false">
@@ -510,9 +510,9 @@
           </section>
         </div>
         <div class="main-footer__menu menu">
-          <h4 class="menu__heading heading-small">Интернет-магазин
+          <h3 class="menu__heading heading-small">Интернет-магазин
             <span class="visually-hidden"> ссылки</span>
-          </h4>
+          </h3>
           <ul class="menu__list">
             <li class="menu__item">
               <a class="menu__link" href="#!">Каталог</a>
@@ -529,9 +529,9 @@
           </ul>
         </div>
         <div class="main-footer__media media">
-          <h4 class="media__heading heading-small">Медиа
+          <h3 class="media__heading heading-small">Медиа
             <span class="visually-hidden"> ссылки</span>
-          </h4>
+          </h3>
           <ul class="media__list">
             <li class="media__item">
               <a class="media__link" href="#!">Блог</a>
@@ -545,7 +545,7 @@
           </ul>
         </div>
         <div class="main-footer__contacts contacts">
-          <h4 class="contacts__heading heading-small">Контакты</h4>
+          <h3 class="contacts__heading heading-small">Контакты</h3>
           <p class="contacts__text">
             <svg class="contacts__icon" width="13" height="16" aria-hidden="true" focusable="false">
               <use xlink:href="./img/icons/stack.svg#icon-address" />
