add edits mobile

--- a/source/index.html
+++ b/source/index.html
@@ -203,10 +203,10 @@
           </div>
           <form class="catalog__form form" method="get" action="https://echo.htmlacademy.ru/">
             <fieldset class="form__group">
-              <p class="form__heading">Цена</p>
+              <p class="form__heading form__heading--price">Цена</p>
               <div class="form__range range">
                 <div class="range__scale">
-                  <div class="range__bar" style="left: 0%; width: 90%">
+                  <div class="range__bar" style="left: 0%; width: 94%">
                     <button class="range__toggle range__toggle--min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
@@ -425,7 +425,7 @@
             <ul class="products__pagination pagination">
               <li class="pagination__item">
                 <a class="pagination__link" href="#!">
-                  <svg class="pagination__icon" width="10" height="6" aria-hidden="true" focusable="false">
+                  <svg class="pagination__icon" width="10" height="10" aria-hidden="true" focusable="false">
                     <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
                   </svg>
                   <span class="pagination__text">Назад</span>
@@ -443,7 +443,7 @@
               <li class="pagination__item">
                 <a class="pagination__link" href="#!">
                   <span class="pagination__text">Вперёд</span>
-                  <svg class="pagination__icon pagination__icon--secondary" width="10" height="6" aria-hidden="true" focusable="false">
+                  <svg class="pagination__icon pagination__icon--secondary" width="10" height="10" aria-hidden="true" focusable="false">
                     <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
                   </svg>
                 </a>
@@ -510,7 +510,7 @@
           </section>
         </div>
         <div class="main-footer__menu menu">
-          <h3 class="menu__heading heading-small">Интернет-магазин
+          <h3 class="menu__title title-small">Интернет-магазин
             <span class="visually-hidden"> ссылки</span>
           </h3>
           <ul class="menu__list">
@@ -529,7 +529,7 @@
           </ul>
         </div>
         <div class="main-footer__media media">
-          <h3 class="media__heading heading-small">Медиа
+          <h3 class="media__title title-small">Медиа
             <span class="visually-hidden"> ссылки</span>
           </h3>
           <ul class="media__list">
@@ -545,7 +545,7 @@
           </ul>
         </div>
         <div class="main-footer__contacts contacts">
-          <h3 class="contacts__heading heading-small">Контакты</h3>
+          <h3 class="contacts__title title-small">Контакты</h3>
           <p class="contacts__text">
             <svg class="contacts__icon" width="13" height="16" aria-hidden="true" focusable="false">
               <use xlink:href="./img/icons/stack.svg#icon-address" />
