add edits tablet

--- a/source/index.html
+++ b/source/index.html
@@ -424,7 +424,7 @@
             </ol>
             <ul class="products__pagination pagination">
               <li class="pagination__item">
-                <a class="pagination__link" href="#!">
+                <a class="pagination__link pagination__link--text" href="#!">
                   <svg class="pagination__icon" width="10" height="10" aria-hidden="true" focusable="false">
                     <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
                   </svg>
@@ -441,7 +441,7 @@
                 <a class="pagination__link" href="#!">3</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#!">
+                <a class="pagination__link pagination__link--text" href="#!">
                   <span class="pagination__text">Вперёд</span>
                   <svg class="pagination__icon pagination__icon--secondary" width="10" height="10" aria-hidden="true" focusable="false">
                     <use xlink:href="./img/icons/stack.svg#icon-arrow-secondary" />
