--- a/source/index.html
+++ b/source/index.html
@@ -471,7 +471,7 @@
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
-        <div class="main-footer__container">
+        <div class="main-footer__link-container">
           <a class="main-footer__logo" href="index.html">
             <picture>
               <source media="(min-width: 768px)" srcset="./img/logo/logo-desktop.svg" width="170" height="36">
@@ -509,7 +509,7 @@
             </ul>
           </section>
         </div>
-        <div class="main-footer__menu menu">
+        <section class="main-footer__menu menu">
           <h3 class="menu__title title-small">Интернет-магазин
             <span class="visually-hidden"> ссылки</span>
           </h3>
@@ -527,8 +527,8 @@
               <a class="menu__link" href="#!">О нас</a>
             </li>
           </ul>
-        </div>
-        <div class="main-footer__media media">
+        </section>
+        <section class="main-footer__media media">
           <h3 class="media__title title-small">Медиа
             <span class="visually-hidden"> ссылки</span>
           </h3>
@@ -543,8 +543,8 @@
               <a class="media__link" href="#!">Правовая информация</a>
             </li>
           </ul>
-        </div>
-        <div class="main-footer__contacts contacts">
+        </section>
+        <section class="main-footer__contacts contacts">
           <h3 class="contacts__title title-small">Контакты</h3>
           <p class="contacts__text">
             <svg class="contacts__icon" width="13" height="16" aria-hidden="true" focusable="false">
@@ -557,15 +557,16 @@
               <use xlink:href="./img/icons/stack.svg#icon-phone" />
             </svg>
             +7 (999) 999-99-99</a>
-        </div>
-        <div class="main-footer__copyright copyright">
+        </section>
+        <section class="main-footer__copyright copyright">
+          <h2 class="visually-hidden">Авторское право.</h2>
           <p class="copyright__text">Разработано в</p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
             <svg class="copyright__icon" width="12" height="16" aria-hidden="true" focusable="false">
               <use xlink:href="./img/icons/stack.svg#logo-html-academy" />
             </svg>
           </a>
-        </div>
+        </section>
       </div>
     </footer>
 
