--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preload" href="./fonts/montserrat-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/montserrat-medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/montserrat-semibold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="./fonts/montserrat-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Интернет магазин: Drink2Go</title>
@@ -101,8 +103,8 @@
                   <img class="swiper-slide__image" src="./img/new/new-2-mobile@x1.png" srcset="./img/new/new-2-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Лавандовый Латте">
                 </picture>
                 <div class="swiper-slide__info-container">
+                  <span class="swiper-slide__badge badge">Новинка!</span>
                   <h3 class="swiper-slide__header">Лавандовый Латте</h3>
-                  <span class="swiper-slide__signature">Новинка!</span>
                   <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
                   <div class="swiper-slide__buttom-container">
                     <div class="swiper-slide__price-container">
@@ -123,8 +125,8 @@
                   <img class="swiper-slide__image" src="./img/new/new-3-mobile@x1.png" srcset="./img/new/new-3-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Тройной Эспрессо">
                 </picture>
                 <div class="swiper-slide__info-container">
+                  <span class="swiper-slide__badge badge">Новинка!</span>
                   <h3 class="swiper-slide__header">Тройной Эспрессо</h3>
-                  <span class="swiper-slide__signature">Новинка!</span>
                   <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
                   <div class="swiper-slide__buttom-container">
                     <div class="swiper-slide__price-container">
